--- a/scss/dumb.scss
+++ b/scss/dumb.scss
@@ -6,13 +6,6 @@ section.ar_contact {
     background-attachment: scroll;
     background-position: center center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-    .ar_contact_row {
-        padding-top: 2%;
-    }
     
     .section-heading {
         color: goldenrod !important;
@@ -24,8 +17,7 @@ section.ar_contact {
     
     footer {
         color: white;
-        height: 70px;
-//        margin-top: 6.3%;
+        margin-top: 6.3%;
         background-color: rgba(black, 0.7);
     }
 }
